# djangify

./: .gitignore  README.md  manage.py  pyproject.toml  setup-dev.sh  tailwind.config.js
apps/blog/: admin.py  apps.py  models.py
apps/core/: models.py
apps/portfolio/: admin.py  models.py  urls.py
apps/portfolio/migrations/: 0001_initial.py
djangify/: asgi.py  settings.py  urls.py
djangify_backend/: .gitignore
djangify_backend/apps/blog/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
djangify_backend/apps/blog/email/: comment_approved.html  comment_rejected.html  new_comment.html
djangify_backend/apps/blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_comment_options_and_more.py  0003_alter_post_featured_image.py  0004_alter_category_options_alter_comment_options_and_more.py  0005_category_title_tag_title_alter_category_created_at_and_more.py
djangify_backend/apps/core/: apps.py  emails.py  mixins.py  models.py  pagination.py  serializers.py  throttling.py  utils.py  views.py  viewsets.py
djangify_backend/apps/portfolio/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
djangify_backend/config/: urls.py  wsgi.py
djangify_backend/config/settings/: base.py  development.py  production.py
djangify_backend/templates/: base.html
djangify_backend/templates/admin/: base_site.html
djangify_backend/templates/core/: home.html
djangify_backend/templates/emails/: reset_password.html  verify_email.html
djangify_frontend/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
djangify_frontend/pages/: about.tsx
djangify_frontend/src/app/: layout.tsx  page.tsx
djangify_frontend/src/components/: theme-toggle.tsx
djangify_frontend/src/lib/: api.ts  utils.ts
djangify_frontend/src/providers/: providers.tsx
djangify_frontend/src/types/: blog.ts
(+69 files in other folders)
