[tool.poetry]
name = "djangify"
version = "0.1.0"
description = "Django portfolio web application"
authors = ["Diane Corriette"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.1"
psycopg2-binary = "2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
