[tool.poetry]
name = "djangify"
version = "0.1.0"
description = "Django portfolio web application"
authors = ["Diane Corriette <dcorriette@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.5.0"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^4.4.6"
django-filter = "^24.3"
dj-rest-auth = "^6.0.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
